--- a/docs/_sass/variables.scss
+++ b/docs/_sass/variables.scss
@@ -1,5 +1,3 @@
----
----
 
 // Breakpoints
 $large-breakpoint: 64em !default;
@@ -7,23 +5,20 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff !default;
-$header-bg-color: #f39c12;
-$header-bg-color-secondary: #e67e22;
+$header-bg-color: #1e6bb8 !default;
+$header-bg-color-secondary: #7EA7D3 !default;
 
 // Text
-$section-headings-color: #D35400;
-$body-text-color: #606c71 !default;
-$body-link-color: #1e6bb8 !default;
+$section-headings-color: #1e6bb8 !default;
+$body-text-color: #000000 !default;
+$body-link-color: #7EA7D3 !default;
 $blockquote-text-color: #819198 !default;
 
 // Code
 $code-bg-color: #f3f6fa !default;
-$code-text-color: #567482 !default;
+$code-text-color: #494D4E !default;
 
 // Borders
 $border-color: #dce6f0 !default;
 $table-border-color: #e9ebec !default;
 $hr-border-color: #eff0f1 !default;
-
-@import "{{ site.theme }}";
-
