--- a/docs/_sass/variables.scss
+++ b/docs/_sass/variables.scss
@@ -5,8 +5,8 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff !default;
-$header-bg-color: #1e6bb8 !default;
-$header-bg-color-secondary: #7EA7D3 !default;
+$header-bg-color: #1E2853  !default;
+$header-bg-color-secondary: #1e6bb8 !default;
 
 // Text
 $section-headings-color: #1e6bb8 !default;
