--- a/docs/_sass/variables.scss
+++ b/docs/_sass/variables.scss
@@ -5,11 +5,11 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff !default;
-$header-bg-color: #1E2853  !default;
+$header-bg-color: #1e2853  !default;
 $header-bg-color-secondary: #1e6bb8 !default;
 
 // Text
-$section-headings-color: #1e6bb8 !default;
+$section-headings-color: 1e2853 !default;
 $body-text-color: #000000 !default;
 $body-link-color: #7EA7D3 !default;
 $blockquote-text-color: #819198 !default;
