--- a/docs/_sass/variables.scss
+++ b/docs/_sass/variables.scss
@@ -9,7 +9,7 @@ $header-bg-color: #1e2853  !default;
 $header-bg-color-secondary: #1e6bb8 !default;
 
 // Text
-$section-headings-color: 1e2853 !default;
+$section-headings-color:  #32497d  !default;
 $body-text-color: #000000 !default;
 $body-link-color: #7EA7D3 !default;
 $blockquote-text-color: #819198 !default;
