--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -33,7 +33,7 @@
         <footer class="site-footer">
             {% if site.github.is_project_page %}
             <span class="site-footer-owner"><a href="{{ site.github.owner_url }}"><img src="figures/bma.png" height="60px"></a></span>            {% endif %}
-	    <span class="site-footer-credits">These page were created by <a href="mailto:tim.kahlke@bluemountainsanalytics.com.au">Tim Kahlke</a>.</span>
+	    <span class="site-footer-credits">These pages were created by <a href="mailto:tim.kahlke@bluemountainsanalytics.com.au">Tim Kahlke</a>.</span>
         </footer>
     </section>
 </body>
